syntax = "proto3";

package pb;

import "user.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/saransh-khobragade/golang-postgres-kubernetes-gRPC/pb";

message LoginUserRequest{
    string username = 1;
    string password = 2;
}

message LoginUserResponse{
    User user = 1;
    string access_token = 2;
    google.protobuf.Timestamp access_token_expires_at = 3;
}



